--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
   </head>
 
-  <body>
+  <body class="h-screen w-screen absolute bg-gray-200 dark:bg-gray-900">
     <%= yield %>
   </body>
 </html>
