--- a/app/frontend/entrypoints/index.css
+++ b/app/frontend/entrypoints/index.css
@@ -7,6 +7,10 @@
   @apply max-w-full flex flex-col items-center justify-center h-screen mx-auto relative space-y-8;
 }
 
+.currency-item {
+  @apply w-96 shrink-0 h-auto bg-white rounded-md flex flex-col items-center justify-start overflow-hidden shadow-2xl mr-8 mt-8;
+}
+
 .modal-wrapper {
   @apply absolute inset-0 flex items-center justify-center z-20 bg-gray-800/40 backdrop-blur;
 }
